# potato

./: README.md  privacy.md
.github/workflows/: docker.yml  flutter.yml  rust.yml
potato_app/: .gitignore  flutter_launcher_icons.yaml  pubspec.yaml
potato_app/android/app/: build.gradle.kts
potato_app/assets/translations/: en.json  fr.json
potato_app/ios/Runner/: Info.plist
potato_app/ios/Runner.xcodeproj/: project.pbxproj
potato_app/lib/: app.dart  main.dart
potato_app/lib/viewmodels/: chunk_infos_bytes_provider.dart  chunk_infos_bytes_provider.g.dart  chunks_repository_provider.dart  chunks_repository_provider.g.dart  loading_state_provider.dart  loading_state_provider.g.dart  potato_api_provider.dart  potato_api_provider.g.dart  room_provider.dart  room_provider.g.dart  rooms_repository_provider.dart  rooms_repository_provider.g.dart  short_codes_history_provider.dart  short_codes_history_provider.g.dart
potato_app/lib/views/: theme.dart
potato_app/linux/: CMakeLists.txt
potato_app/macos/Flutter/: GeneratedPluginRegistrant.swift
potato_app/macos/Runner.xcodeproj/: project.pbxproj
potato_app/test/: dummy_test.dart  widget_test.dart
potato_app/web/: manifest.json
potato_server/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
potato_server/src/: lib.rs  main.rs
potato_server/src/entities/: chunks.rs  mod.rs  rooms.rs
potato_server/src/handlers/: mod.rs
potato_server/src/hashing/: mod.rs
potato_server/src/repositories/: mod.rs
potato_server/src/state/: mod.rs
potato_server/tests/: api.rs
potato_server/tools/: curl.md
(+21 files in other folders)
