[package]
name = "potato_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["rt-multi-thread"] }
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
logs = "0.7.1"
sha2 = "0.11.0"

[dev-dependencies]
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros"] }
